update meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Gliphi | Create your own symbolic code language."
+      content="Gliphi | Your very own Enigma machine. Just never disclose or forget your seed and your secrets are safe 😉."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
